# canari-ml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yaml
conf/: config.yaml  download.yaml  paths.yaml  plot.yaml  postprocess.yaml  predict.yaml  preprocess.yaml  train.yaml
conf/callbacks/: default.yaml  model_checkpoint.yaml
conf/hydra/job_logging/: basic_message.yaml  colorlog_custom.yaml
conf/hydra_config/: default.yaml  predict.yaml  train.yaml
conf/logger/: csv.yaml  tensorboard.yaml  wandb.yaml
conf/model/: unet.yaml
conf/paths/: postprocess.yaml  predict.yaml  preprocess.yaml
conf/plot/: ua700.yaml
conf/postprocess/: netcdf.yaml
conf/preprocess/: default.yaml
conf/preprocess_steps/: add_era5.yaml  add_mask.yaml  add_region_weights.yaml  cache.yaml  init_loader.yaml  preprocess_era5.yaml  reproject.yaml
conf/profiler/: pytorch.yaml
conf/trainer/: default.yaml
docs/: download.md  gen_help.py  gen_ref_pages.py  index.md  installation.md  preprocess.md
docs/css/: github-permalink-style.css
docs/dev-guide/: contributing.md  index.md  releases.md
docs/help/: download.md  general.md  plot.md  postprocess.md  predict.md  preprocess.md  train.md
docs/user-guide/: examples.md  faq.md  index.md  slurm.md  usage.md
docs/user-guide/download/: cli_usage.md  config_file_usage.md  index.md  output_structure.md  usage.md
docs/user-guide/experiments/: usage.md
docs/user-guide/getting-started/: hydra.md  installation.md  software_architecture.md
docs/user-guide/plot/: index.md  output_structure.md
docs/user-guide/postprocess/: index.md  output_structure.md
docs/user-guide/predict/: config_file_usage.md  index.md  output_structure.md
docs/user-guide/preprocess/: cli_usage.md  config_file_usage.md  index.md  output_structure.md  usage.md
docs/user-guide/train/: advanced_usage.md  cli_usage.md  config_file_usage.md  help.md  index.md  output_structure.md  usage.md
src/canari_ml/: __init__.py  cli.py  utils.py
src/canari_ml/cli/: cli.py  download.py  plot.py  postprocess.py  predict.py  preprocess.py  train.py  utils.py
src/canari_ml/conf/: download.yaml  plot.yaml  postprocess.yaml  predict.yaml  preprocess.yaml  train.yaml
src/canari_ml/conf/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
src/canari_ml/conf/common/: default.yaml
src/canari_ml/conf/hydra/job_logging/: basic_message.yaml  colorlog_custom.yaml  default.yaml
src/canari_ml/conf/hydra_config/: train.yaml
src/canari_ml/conf/logger/: csv.yaml  tensorboard.yaml
src/canari_ml/conf/model/: default.yaml  unet.yaml
src/canari_ml/conf/paths/: default.yaml  download.yaml  plot.yaml  postprocess.yaml  predict.yaml  train.yaml
src/canari_ml/conf/plot/: default.yaml  ua700.yaml
src/canari_ml/conf/postprocess/: default.yaml  netcdf.yaml  plot_ua700.yaml
src/canari_ml/conf/predict/: default.yaml
src/canari_ml/conf/preprocess/: default.yaml
src/canari_ml/conf/train/: default.yaml
src/canari_ml/data/: __init__.py  dataloader.py  loader.py  network_dataset.py
src/canari_ml/data/loaders/: __init__.py  base.py  dask.py  serial.py
src/canari_ml/data/masks/: era5.py
src/canari_ml/data/processors/: cds.py
src/canari_ml/download/: era5.py
src/canari_ml/hydra/: cli.py  download.py  plot.py  postprocess.py  predict.py  preprocess.py  train.py  utils.py
src/canari_ml/hydra/bak/: preprocess.py
src/canari_ml/lightning/: __init__.py  checkpoints.py
src/canari_ml/models/: cli.py  lightning_modules.py  losses.py  metrics.py  model_wrapper.py  models.py  predict.py  train.py
src/canari_ml/models/networks/: pytorch.py
src/canari_ml/plotting/: cli.py  forecast.py  utils.py
src/canari_ml/postprocess/: predict.py
src/canari_ml/preprocess/: cli.py  preprocess.py  regrid.py  reproject.py  utils.py
src/canari_ml/process/: predict.py
tests/: test_metrics.py
tests/data/loaders/: test_serial.py
tests/models/: test_unet.py
