[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "canari_ml"
dynamic = ["version", "readme"]
requires-python = ">=3.12"
description = "Library for North-Atlantic jet stream forecasting"
license = { file = "LICENSE" }
authors = [{ name = "Bryn Noel Ubald" }]
maintainers = [{ email = "bryald@bas.ac.uk" }]
dependencies = [
  "cartopy",
  "cf-units",
  "dask",
  "distributed",
  "download-toolbox @ git+https://github.com/environmental-forecasting/download-toolbox@icenet_0.4",
  "h5py",
  "icenet @ git+https://github.com/icenet-ai/icenet@9042bf6",
  "joblib",
  "imageio-ffmpeg",
  "lightning",
  "matplotlib",
  "pip",
  "preprocess-toolbox @ git+https://github.com/environmental-forecasting/preprocess-toolbox@icenet_0.4",
  "rioxarray",
  "seaborn",
  "shapely",
  "tqdm",
  "wheel",
  "xarray[io]>=2024.3.0",
]
classifiers = [
  "Development Status :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
canari_ml_dataset_create = "canari_ml.data.loader:create_network_dataset"
canari_ml_preprocess_reproject = "canari_ml.preprocess.reproject:reproject"
canari_ml_train = "canari_ml.models.train:pytorch_main"
canari_ml_predict = "canari_ml.models.predict:main"
canari_ml_plot_numpy = "canari_ml.plotting.forecast:plot_numpy"
canari_ml_output = "canari_ml.process.predict:create_cf_output"
canari_ml_plot_ua700_error = "canari_ml.plotting.forecast:plot_ua700_error"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
version = { attr = "canari_ml.__version__" }
readme = { file = ["README.md"] }

[project.optional-dependencies]
dev = ["coverage", "pre-commit", "ruff", "tox", "pytest", "build"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-section-index"]

[project.urls]
"Source" = "https://github.com/antarctica/canari-ml"
"Issue tracker" = "https://github.com/antarctica/canari-ml/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests",
    "src/tests",
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["src"]
packages = ["canari_ml"]

[[tool.pydoc-markdown.processors]]
type = "filter"
documented_only = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "markdown"
render_toc = true
filename = "docs/reference.md"
