[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "canari_ml"
dynamic = ["version", "readme"]
requires-python = ">=3.12"
description = "Library for North-Atlantic jet stream forecasting"
license = { file = "LICENSE" }
authors = [{ name = "Bryn Noel Ubald" }]
maintainers = [{ email = "bryald@bas.ac.uk" }]
dependencies = [
  "cartopy",
  "cf-units",
  "dask",
  "distributed",
  "download-toolbox==0.0.5",
  "h5py",
  "icenet @ git+https://github.com/icenet-ai/icenet@cb8a483ab5c8a6283799ec95a86d3099e4708f2e",
  "imageio-ffmpeg",
  "lightning",
  "matplotlib",
  "ncdata",
  "pip",
  "preprocess-toolbox==0.0.4",
  "rioxarray",
  "scitools-iris",
  "seaborn",
  "shapely",
  "tqdm",
  "wheel",
  "xarray[io]>=2024.3.0",
]
classifiers = [
  "Development Status :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
canari_ml_dataset_create = "canari_ml.data.loader:create_network_dataset"
canari_ml_preprocess_reproject = "canari_ml.preprocess.reproject:reproject"
canari_ml_preprocess_add_region_weights = "canari_ml.data.masks.era5:add_region_weights"
canari_ml_train = "canari_ml.models.train:pytorch_main"
canari_ml_predict = "canari_ml.models.predict:main"
canari_ml_plot_numpy = "canari_ml.plotting.forecast:plot_numpy"
canari_ml_output = "canari_ml.process.predict:create_cf_output"
canari_ml_plot_ua700_error = "canari_ml.plotting.forecast:plot_ua700_error"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[project.optional-dependencies]
dev = ["coverage", "pre-commit", "ruff", "tox", "pytest", "build", "torch-tb-profiler", "commitizen"]
docs = ["mkdocs", "mkdocstrings[python]", "mkdocs-material", "mkdocs-gen-files", "mkdocs-literate-nav", "mkdocs-section-index"]

[project.urls]
"Source" = "https://github.com/antarctica/canari-ml"
"Issue tracker" = "https://github.com/antarctica/canari-ml/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = [
    "tests"
]
pythonpath = [
  "."
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["src"]
packages = ["canari_ml"]

[[tool.pydoc-markdown.processors]]
type = "filter"
documented_only = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "markdown"
render_toc = true
filename = "docs/reference.md"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version = "0.0.1a0"
update_changelog_on_bump = true
major_version_zero = true # Using this for initial dev before hitting v1.0.0
