[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "canari_ml"
dynamic = ["version", "readme"]
requires-python = ">=3.11,<3.12"
description = "Library for North-Atlantic jet stream forecasting"
license = { file = "LICENSE" }
authors = [{ name = "Bryn Noel Ubald" }]
maintainers = [{ email = "bryald@bas.ac.uk" }]
classifiers = [
  "Development Status :: 3",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "cartopy",
  "cf-units",
  "dask",
  "distributed",
  "download-toolbox @ git+https://github.com/environmental-forecasting/download-toolbox@df6e5cb458280d310ea66ed2b633c941b960fffb",
  "h5py",
  "hydra_colorlog",
  "hydra-core",
  "hydra-submitit-launcher",
  "imageio-ffmpeg",
  "lightning",
  "matplotlib",
  "mkdocs-mermaid2-plugin",
  "ncdata",
  "pip",
  "preprocess-toolbox @ git+https://github.com/environmental-forecasting/preprocess-toolbox@0213b1cbb13035f78e29703d866ba8f7adfef3a2",
  "rioxarray",
  "scitools-iris",
  "seaborn",
  "shapely",
  "tensorboard",
  "tqdm",
  "typing-extensions",
  "wandb",
  "wheel",
  "xarray[io]>=2024.3.0",
  "zarr<3",
]

[project.optional-dependencies]
dev = [
  "coverage",
  "pre-commit",
  "ruff",
  "tox",
  "pytest",
  "build",
  "torch-tb-profiler",
  "commitizen",
]
docs = [
  "markdown-exec[ansi]",
  "mkdocs",
  "mkdocs_puml",
  "mkdocs-autorefs",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-git-revision-date-localized-plugin",
  "mkdocs-literate-nav",
  "mkdocs-material",
  "mkdocs-section-index",
  "mkdocs-toggle-sidebar-plugin",
]

[project.scripts]
canari_ml = "canari_ml.hydra.cli:main"
# canari_ml_preprocess_add_region_weights = "canari_ml.data.masks.era5:add_region_weights"
# canari_ml_plot_numpy = "canari_ml.plotting.forecast:plot_numpy"

[tool.setuptools.packages.find]
where = ["src"]

# Ensure hydra config files also installed
[tool.setuptools.package-data]
canari_ml = ["conf/**/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }

[project.urls]
"Source" = "https://github.com/CANARI-ML/canari-ml"
"Issue tracker" = "https://github.com/CANARI-ML/canari-ml/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "unet: Test the UNet model architecture",
  "metrics: Test custom metrics",
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["src"]
packages = ["canari_ml"]

[[tool.pydoc-markdown.processors]]
type = "filter"
documented_only = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "markdown"
render_toc = true
filename = "docs/reference.md"

[tool.commitizen]
name = "cz_conventional_commits"
version_scheme = "pep440"
version = "0.0.1a1"
update_changelog_on_bump = true
major_version_zero = true        # Using this for initial dev before hitting v1.0.0
